// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`🧪 Select Story Tests (Direct function call style) Default story renders with a default country and placeholder 1`] = `
<div>
  <div
    class="-m-4"
  >
    <div
      class="flex p-4"
    >
      <div
        class="relative inline-block w-50"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="shadow-sm flex items-center text-md border border-gray-300 dark:border-gray-500 h-11 px-3.5 rounded-lg bg-white dark:bg-gray-800 focus:ring-4 focus:border-primary-300 dark:focus:border-gray-100 focus:ring-primary-100 dark:focus:ring-gray-100 dark:focus:ring-opacity-20 whitespace-nowrap text-gray-900 dark:text-white w-50"
          data-headlessui-state=""
          id="headlessui-listbox-button-:r2:"
          type="button"
        >
          <img
            alt="in"
            class="w-5 h-5 mr-2"
            src="https://kapowaz.github.io/circle-flags/flags/in.svg"
          />
           
          Ahmedabad, IN
          <svg
            class="text-gray-500 dark:text-gray-300 transform duration-100 ease-out ml-auto"
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="6 9 12 15 18 9"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`🧪 Select Story Tests (Direct function call style) SelectWithIcon story renders with a leading dollar sign icon and price 1`] = `
<div>
  <div
    class="-m-4"
  >
    <div
      class="flex p-4"
    >
      <div
        class="relative inline-block w-50"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="shadow-sm flex items-center text-md border border-gray-300 dark:border-gray-500 h-11 px-3.5 rounded-lg bg-white dark:bg-gray-800 focus:ring-4 focus:border-primary-300 dark:focus:border-gray-100 focus:ring-primary-100 dark:focus:ring-gray-100 dark:focus:ring-opacity-20 whitespace-nowrap text-gray-900 dark:text-white w-50"
          data-headlessui-state=""
          id="headlessui-listbox-button-:r8:"
          type="button"
        >
          <div
            class="w-5 h-5 mr-2 overflow-hidden"
            data-testid="leading-icon"
          >
            <svg
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="12"
                x2="12"
                y1="1"
                y2="23"
              />
              <path
                d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
              />
            </svg>
          </div>
          Any price
          <svg
            class="text-gray-500 dark:text-gray-300 transform duration-100 ease-out ml-auto"
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="6 9 12 15 18 9"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
